<resources>
    <string name="app_name">Rockbox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_login">Crie seu nome de usuário</string>

    <!-- Strings related to login -->
    <string name="login_username">Username</string>
    <string name="action_sign_in">Entre ou crie seu usuário</string>
    <string name="action_sign_in_short">Entre</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="loginTitle">Escolha um nome de usuário</string>
    <string name="loginYourAreLogging">Obrigado! Estamos preparando tudo para você.</string>

    <!-- Strings related to Navigation Drawer Menu-->
    <string name="nav_menu_calendar">Calendário do Rock</string>
    <string name="nav_menu_lyrics">Letras Salvas</string>
    <string name="nav_menu_bands">Minhas Bandas</string>
    <string name="nav_menu_player">Player de Música</string>
    <string name="nav_menu_youtube">Youtube</string>
    <string name="nav_menu_spotify">Spotify</string>


    <!-- Strings related to Navigation Drawer Menu-->
    <string name="player_tab_nowplaying">Em Execução</string>
    <string name="player_tab_songlist">Músicas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
