<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/nav_menu_calendar_24dp"
            android:title="@string/nav_menu_calendar"/>
        <item
            android:id="@+id/nav_bands"
            android:icon="@drawable/nav_menu_bands_24dp"
            android:title="@string/nav_menu_bands" />

        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/nav_menu_player_24dp"
            android:title="@string/nav_menu_player" />
        <item
            android:id="@+id/nav_lyrics"
            android:icon="@drawable/nav_menu_lyrics_24dp"
            android:title="@string/nav_menu_lyrics" />

    </group>

    <item android:title="Conexões">
        <menu>
            <item
                android:id="@+id/nav_youtube"
                android:icon="@drawable/navmenuyoutube"
                android:title="@string/nav_menu_youtube" />
            <item
                android:id="@+id/nav_spotify"
                android:icon="@drawable/navmenuspotify"
                android:title="@string/nav_menu_spotify" />
        </menu>
    </item>

</menu>
